Closed Bug 241022 Opened 22 years ago Closed 22 years ago

nsXPComInit.cpp has wrong offset checking for post 1.6 functions

Categories

(Core :: XPCOM, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mpgritti, Assigned: dougt)

Details

Attachments

(1 file)

It checks for cstringCopy which isnt the latest 1.7 function in the structure (utf16ToCString). I guess someone forgot to update it when the conversion functions was added.
Attached patch fixSplinter Review
Attachment #146530 - Flags: review?(darin)
Comment on attachment 146530 [details] [diff] [review] fix r+sr=darin
Attachment #146530 - Flags: superreview+
Attachment #146530 - Flags: review?(darin)
Attachment #146530 - Flags: review+
Attachment #146530 - Flags: approval1.7?
fixed-on-trunk for 1.8 alpha
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Attachment #146530 - Flags: approval1.7?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: