fixes bug 241022 "nsXPComInit.cpp has wrong offset checking for post 1.6 functions" patch by marco@gnome.org r+sr=darin